--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\SARKCES.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/SARKCES.jpg?raw=true" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Francis Nhyira Arko</h1>
                 <!-- Icon Divider-->
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Corporate Event Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Corporate%20Event%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Restaurant Menu Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Restaurant%20Menu%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Real Estate Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Real%20Estate%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -97,7 +97,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Fitness Class Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Fitness%20Class%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Charity Event Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Charity%20Event%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Sale Promotion Flyer.jpg" alt="..." />
+                            <img class="img-fluid" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Sale%20Promotion%20Flyer.jpg?raw=true" alt="..." />
                         </div>
                     </div>
                 </div>
