--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Corporate Event Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Corporate%20Event%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">A clean and professional design for promoting business events and conferences.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -297,7 +297,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Restaurant Menu Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Restaurant%20Menu%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
 A vibrant flyer showcasing a restaurant's menu and special offers.</p>
@@ -330,7 +330,7 @@ A vibrant flyer showcasing a restaurant's menu and special offers.</p>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Real Estate Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Real%20Estate%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Modern and minimalistic design for advertising property listings.
 </p>
@@ -363,7 +363,7 @@ A vibrant flyer showcasing a restaurant's menu and special offers.</p>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Fitness Class Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Fitness%20Class%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">A bold and energetic design for gym promotions and fitness classes.
 </p>
@@ -396,7 +396,7 @@ A vibrant flyer showcasing a restaurant's menu and special offers.</p>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Charity Event Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Charity%20Event%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">A warm and inviting design to promote fundraisers and charity events.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -428,7 +428,7 @@ A vibrant flyer showcasing a restaurant's menu and special offers.</p>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="C:\Users\SARKCES112\Desktop\startbootstrap-freelancer-gh-pages\Sale Promotion Flyer.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://github.com/FrancisArko10/sackes12.github.io/blob/main/Sale%20Promotion%20Flyer.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Eye-catching design with bright colors for seasonal sales and discounts.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
